--- a/lang/zh.json
+++ b/lang/zh.json
@@ -325,7 +325,7 @@
         "title-func": {
             "My Portal": "我的入口",
             "Portal": "我的入口",
-            "Promotion category provides the best program impression in program store.": "Promotion category provides the best program impression in program store.",
+            "Main channels are the first thing sighted by your audience, which offer the great opportunity for your fine programs to gain visibility and exposure.": "主頻道是用戶使用app時第一眼看到的內容，提供了最佳的節目曝光。",
             "Preview": "預覽",
             "Save": "儲存",
             "Channel Name": "頻道名稱"
@@ -348,7 +348,18 @@
         "overlay": {
             "Are you sure to remove this channel set?": "你確定要刪除這個頻道？",
             "Unsaved changes will be lost, are you sure you want to leave?": "未儲存資料將遺失，確定離開？",
-            "Processing...": "處理中..."
+            "Processing...": "處理中...",
+            "Add Channel Set": "增加頻道",
+            "Edit Channel Set": "編輯頻道",
+            "Cancel": "取消",
+            "Yes": "確定",
+            "Channel Set Name": "頻道名稱",
+            "Max length is 14 characters": "最多14個英文字母",
+            "Max length is 8 chinese characters": "最多8個中文字"
+        },
+        "prompt": {
+            "You channel set Quota was used.": "你的頻道數已達上限。",
+            "You program Quota was used.": "你的節目數已達上限。"
         },
         "portal-layer": {
             "You can add 27 programs into your channel.": "你可以增加27個節目到你的頻道",
@@ -363,6 +374,7 @@
             "Channel Name": "頻道名稱 ",
             "Program List": "節目列表 ",
             "Programs": "節目",
+            "Add Channel Set": "增加頻道",
             "Add programs": "新增節目",
             "Add programs sub": "",
             "Please input program URL": "請輸入節目網址",
