--- a/lang/zh.json
+++ b/lang/zh.json
@@ -76,7 +76,11 @@
             "No": "否",
             "Back": "上一步",
             "Disconnect": "取消連結",
-            "Restart connection": "重啟連結"
+            "Restart connection": "重啟連結",
+            "Cancel": "取消",
+            "ON": "開",
+            "OFF": "關"
+
         }
     },
     "upload": {
@@ -418,7 +422,11 @@
             "My Programs": "我的節目",
             "Reorder programs": "排序節目",
             "Save order": "儲存排序",
-            "Create a new program": "創建節目"
+            "Create a new program": "創建節目",
+            "Filtered by:": "分類條件:",
+            "All": "全部",
+            "9x9 programs": "9x9節目",
+            "Youtube sync programs": "Youtube同步節目"
         },
         "channel-list": {
             "Get URL": "網址",
@@ -438,7 +446,17 @@
             "You don't have any programs yet": "你尚無任何節目",
             "Create a new program": "創建節目",
             "Create your own <strong>personal and unique</strong> program.": "創建屬於你<strong>個人且獨特</strong>的節目。",
-            "Add online videos into episode and start to <strong>curate your own program.</strong>": "在一集劇集中策展多個單元，開始<strong>策展你的專屬節目</strong>"
+            "Add online videos into episode and start to <strong>curate your own program.</strong>": "在一集劇集中策展多個單元，開始<strong>策展你的專屬節目</strong>",
+            "Sync": "立即同步"
+        },
+        "overlay": {
+            "Create a New Program": "建立一個新的節目",
+            "Choose a type": "選一個類型",
+            "Youtube Sync<br />Program": "Youtube節目",
+            "9x9<br />Program": "9x9節目",
+            "Terms of use": "使用條款",
+            "Agree": "同意",
+            "Disagree": "不同意"
         }
     },
     "cms-settings": {
@@ -530,7 +548,8 @@
             "Please fill in all required fields.": "請輸入必填項目。",
             "Cancel": "取消",
             "Create": "完成",
-            "Save": "儲存"
+            "Save": "儲存",
+            "Add Youtube channel or playlist URL": "輸入Youtube頻道或播放清單"
         }
     },
     "channel-poi": {
