--- a/lang/zh.json
+++ b/lang/zh.json
@@ -44,7 +44,8 @@
             "Are you sure you want to delete this title?": "確定刪除此字卡？",
             "Are you sure you want to delete this POI with interactive event?": "確定刪除此互動時間與事件？",
             "Unsaved changes will be lost, are you sure you want to leave?": "未儲存資料將遺失，確定離開？",
-            "Unsaved changes will be lost, are you sure you want to cancel editing?": "未儲存資料將遺失，確定結束編輯？"
+            "Unsaved changes will be lost, are you sure you want to cancel editing?": "未儲存資料將遺失，確定結束編輯？",
+            "Synchronizing. This may take a few minutes.": "節目同步中，這可能需要幾分鐘的時間。"
         },
         "notice": {
             "Password reset success!": "密碼重新設定成功！",
@@ -447,12 +448,13 @@
             "Create a new program": "創建節目",
             "Create your own <strong>personal and unique</strong> program.": "創建屬於你<strong>個人且獨特</strong>的節目。",
             "Add online videos into episode and start to <strong>curate your own program.</strong>": "在一集劇集中策展多個單元，開始<strong>策展你的專屬節目</strong>",
+            "Sync with<strong>Youtube channel or playlist</strong> to get online videos.": "連結<strong>YouTube頻道或播放清單</strong>取得影片。",
             "Sync": "立即同步"
         },
         "overlay": {
             "Create a New Program": "建立一個新的節目",
             "Choose a type": "選一個類型",
-            "Youtube Sync<br />Program": "Youtube節目",
+            "Youtube Sync<br />Program": "YouTube節目",
             "9x9<br />Program": "9x9節目",
             "Terms of use": "使用條款",
             "Agree": "同意",
@@ -509,7 +511,9 @@
             "Settings": "節目設定"
         },
         "title-func": {
-            "My Programs &gt; Create a new program": "我的節目 &gt; 創建節目",
+            "My Programs": "我的節目",
+            "Create a new 9x9 program": "創建 9x9 節目",
+            "Create a new YouTube Sync Program": "創建 YouTube 同步節目",
             "Settings": "節目設定",
             "Required field": "必填項目"
         },
