second review release bug fix

--- a/lang/en.json
+++ b/lang/en.json
@@ -454,7 +454,7 @@
         },
         "title-func": {
             "My Programs": "My Programs",
-            "Create a new 9x9 program": "Create a new 9x9 progra",
+            "Create a new 9x9 Program": "Create a new 9x9 Program",
             "Create a new YouTube Sync Program": "Create a new YouTube Sync Program",
             "Settings": "Settings",
             "Required field": "Required field"
