YouTube sync language file fix

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -456,7 +456,7 @@
         "overlay": {
             "Create a New Program": "建立一個新的節目",
             "Choose a type": "選一個類型",
-            "Youtube Sync<br />Program": "YouTube節目",
+            "YouTube Sync<br />Program": "YouTube節目",
             "9x9<br />Program": "9x9節目",
             "Terms of use": "使用條款",
             "Agree": "同意",
