--- a/lang/zh.json
+++ b/lang/zh.json
@@ -558,7 +558,10 @@
             "Add Youtube channel or playlist URL": "輸入Youtube頻道或播放清單",
             "Auto sync with YouTube": "YouTube自動同步",
             "Program will automatically synchronize with YouTube at 9 AM, 2 PM and 8 PM every day. Manually do so by clicking \"Sync\" in program list.": "系統會在每天早上九點、下午兩點與晚上八點，與YouTube自動進行同步，或可在節目列表點擊「同步」按鈕進行同步。",
-            "This program will automatically synchronize information and videos from YouTube at 9 AM, 2 PM and 8 PM every day. Are you sure to auto sync?": "YouTube 同步功能開啟後，系統會在每天早上九點、下午兩點與晚上八點自動同步YouTube的資訊與影片，確定要進行同步?"
+            "This program will automatically synchronize information and videos from YouTube at 9 AM, 2 PM and 8 PM every day. Are you sure to auto sync?": "YouTube 同步功能開啟後，系統會在每天早上九點、下午兩點與晚上八點自動同步YouTube的資訊與影片，確定要進行同步?",
+            "Episode sort by": "劇集排序依照",
+            "YouTube playlist or YouTube channel order": "YouTube 播放清單或頻道順序排列",
+            "YouTube playlist or YouTube channel reverse order": "YouTube 播放清單或頻道反序排列"
         }
     },
     "channel-poi": {
