fix language file

--- a/lang/en.json
+++ b/lang/en.json
@@ -496,7 +496,7 @@
             "Create": "Create",
             "Save": "Save",
             "Episode sort by": "Episode sort by",
-            "YouTube playlist or YouTube channel order": "YouTube YouTube playlist or YouTube channel order",
+            "YouTube playlist or YouTube channel order": "YouTube playlist or YouTube channel order",
             "YouTube playlist or YouTube channel reverse order": "YouTube playlist or YouTube channel reverse order"
         }
     },
