--- a/lang/zh.json
+++ b/lang/zh.json
@@ -456,7 +456,7 @@
         "overlay": {
             "Create a New Program": "建立一個新的節目",
             "Choose a type": "選一個類型",
-            "YouTube Sync<br />Program": "YouTube節目",
+            "YouTube Sync<br />Program": "YouTube同步節目",
             "9x9<br />Program": "9x9節目",
             "Terms of use": "使用條款",
             "Agree": "同意",
@@ -525,7 +525,7 @@
             "Program logo": "節目商標",
             "Upload": "上傳",
             "Uploading...": "上傳中...",
-            "Better results with 300x300 or higher resolution image": "建議圖片解析度為300x300或以上",
+            "Better results with 640x480 or higher resolution image": "建議圖片解析度為640x480或以上",
             "Please upload jpeg, png, or gif files.": "請上傳jpeg, png或gif檔。",
             "Description": "介紹",
             "Best within 52 characters": "建議52字以內",
