--- a/lang/zh.json
+++ b/lang/zh.json
@@ -163,6 +163,46 @@
             "Only letters, numbers or low line are allowed.": "用戶名稱請輸入中英文、數字或底線。"
         }
     },
+    "app-notification": {
+        "html-title": {
+            "9x9.tv - App Notifiction": "9x9.tv - 推播訊息"
+        },
+        "func-nav": {
+            "Main Channels": "主頻道",
+            "Program Store": "節目商店",
+            "Promotion Category": "推薦類別",
+            "System Category": "系統類別",
+            "Brand Settings": "品牌設定",
+            "Notification": "通知"
+        },
+        "title-func": {
+            "Portal": "Portal",
+            "Brand Settings": "Brand Settings",
+            "Save": "Save"
+        },
+         "notification": {
+            "History": "已發送通知",
+            "Create a app notification": "創建App通知",
+            "You don't have been authorized to send notifications to the iOS app Android app users.": "您還沒有獲得授權，可以發送通知給 iOS app 與 Android app 用戶。",
+            "You have been authorized to send notifications to the iOS app users.": "您已經獲得授權，可以發送通知給 iOS app 用戶。",
+            "You have been authorized to send notifications to the Android app users.": "您已經獲得授權，可以發送通知給 Android app 用戶。",
+            "You have been authorized to send notifications to the iOS app and Android app users.": "您已經獲得授權，可以發送通知給 iOS app 與 Android app 用戶。",
+            "Input notification message...": "輸入通知內容...",
+            "Tip : Input message within 17 Chinese characters or 34 English letters.": "建議字數為17個中文或34英文字母",
+            "Click the notification to go to": "點擊通知後的行為",
+            "Run app": "開啟App",
+            "Playback for a program or episode": "播放特定節目或劇集",
+            "Input 9x9 program or episode URL...": "輸入9x9節目或劇集連結...",
+            "Cancel": "取消",
+            "Send": "發送",
+            "Please fill in all required fields.": "請輸入必填項目",
+            "Invalid URL, please try again.": "失效的連結，請重新輸入。",
+            "Unsaved changes will be lost, are you sure want to leave?": "未儲存資料將遺失，確定離開？",
+            "No": "否",
+            "Yes": "是",
+            "Notification history list (20 notifications displayed at the most in history list)": "已發送通知列表(顯示最近20筆):"
+        }
+    },
     "brand-setting": {
         "html-title": {
             "9x9.tv - Brand Setting": "9x9.tv - 品牌設定"
@@ -272,7 +312,8 @@
             "Program Store": "節目商店",
             "Promotion Category": "推薦類別",
             "System Category": "系統類別",
-            "Brand Settings": "品牌設定"
+            "Brand Settings": "品牌設定",
+            "Notification": "通知"
         },
         "title-func": {
             "Program Store": "節目商店",
