language text fix

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -179,7 +179,7 @@
             "History": "已發送通知"
 
         },
-         "notification": {
+         "Input notificaion message...": {
             "Create a app notification": "創建App通知",
             "You don't have been authorized to send notifications to the iOS app Android app users.": "您還沒有獲得授權，可以發送通知給 iOS app 與 Android app 用戶。",
             "You have been authorized to send notifications to the iOS app users.": "您已經獲得授權，可以發送通知給 iOS app 用戶。",
@@ -202,8 +202,8 @@
             "Cancel": "取消",
             "Send": "發送",
             "Notification history list (20 notifications displayed at the most in history list)": "已發送通知列表(顯示最近20筆):",
-            "Input notificaion message...": "輸入通知的訊息...",
-            "Input 9x9 program or episode URL...": "輸入 9x9 節目或劇集..."
+            "Input notification message...": "輸入通知內容...",
+            "Input 9x9 program or episode URL...": "輸入 9x9 節目或劇集網址..."
         }
     },
     "brand-setting": {
